src/test/ui/regions/regions-variance-invariant-use-contravariant.nll.stderr
error: lifetime may not live long enough
  --> $DIR/regions-variance-invariant-use-contravariant.rs:20:12
   |
LL | fn use_<'short,'long>(c: Invariant<'long>,
   |         ------ ----- lifetime `'long` defined here
   |         |
   |         lifetime `'short` defined here
...
LL |     let _: Invariant<'short> = c;
   |            ^^^^^^^^^^^^^^^^^ type annotation requires that `'short` must outlive `'long`
   |
   = help: consider adding the following bound: `'short: 'long`
   = note: requirement occurs because of the type Invariant<'_>, which makes the generic argument '_ invariant
   = note: the struct Invariant<'a> is invariant over the parameter 'a
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: aborting due to previous error

